--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "morgan": "^1.9.1",
     "mysql": "github:mysqljs/mysql",
     "mysql-ssh": "^1.0.6",
+    "nodemon": "^1.19.4",
     "tunnel-ssh": "^4.1.4"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.4"
   }
 }
